fixed text sizes on smaller screens

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -304,6 +304,9 @@ a:visited:hover {
 		-moz-columns: 2;
 	}
 
+	.main-header {
+		font-size: 4.5rem;
+	}
 }
 
 @media (min-width: 630px) {
@@ -443,4 +446,11 @@ blockquote {
 	font-size: 2rem;
 	font-weight: 400;
 	font-style: oblique;
+}
+
+@media (max-width: 360px)
+{
+	.main-header{
+		font-size: 3.5rem;
+	}
 }
